# poetry-861-example

./: Dockerfile  config.toml  pyproject.toml
