[tool.poetry]
name = "my-awesome-app"
version = "0.1.0"
description = "My awesome app. Very awesome."
authors = ["K900 <me@0upti.me>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
